结构加载优化